# open-cai

./: .env.example  .gitignore  .mise.toml  README.md  pyproject.toml
configs/eval/: china-censorship.yaml  fast.yaml  sft-refusal-censorship.yaml  smoke.yaml
configs/training/: balanced.yaml  dpo-balanced-h100.yaml  dpo-balanced.yaml  dpo-permissive.yaml  dpo-protective.yaml  dpo-smoke.yaml  permissive.yaml  protective.yaml  sft-balanced-h100.yaml  sft-balanced.yaml  sft-permissive.yaml  sft-protective.yaml  sft-smoke.yaml  smoke.yaml
configs/training/chat_templates/: qwen3-heretic-dpo.jinja  qwen3-heretic-sft.jinja
constitutions/: README.md  balanced.md  core.md  grok.md  permissive.md  playful.md  protective.md  strict.md
constitutions/compiled/: balanced.rules.yaml  grok.rules.yaml  permissive.rules.yaml  playful.rules.yaml  strict.rules.yaml
constitutions/compiled/versions/: balanced.v4.rules.yaml  balanced.v5.rules.yaml  balanced.v6.rules.yaml  core.v1.rules.yaml  core.v2.rules.yaml  core.v3.rules.yaml  core.v4.rules.yaml  core.v5.rules.yaml  permissive.v4.rules.yaml  permissive.v5.rules.yaml  permissive.v6.rules.yaml  permissive.v7.rules.yaml  playful.v2.rules.yaml  playful.v3.rules.yaml  playful.v4.rules.yaml  playful.v5.rules.yaml  playful.v6.rules.yaml  strict.v4.rules.yaml  strict.v5.rules.yaml  strict.v6.rules.yaml  strict.v7.rules.yaml
constitutions/guides/: balanced.guide.md  permissive.guide.md  playful.guide.md  protective.guide.md  strict.guide.md
docs/: results-report.md
src/cai/: __init__.py  constitution.py  dataset.py  evaluation.py  openrouter.py  training.py
tests/: test_constitution.py  test_dataset.py  test_evaluation.py  test_openrouter.py  test_training.py
