[project]
name = "cai"
version = "0.1.0"
description = "A small Constitutional AI pipeline playground."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
cai-constitution = "cai.constitution:main"
cai-dataset = "cai.dataset:main"
cai-openrouter = "cai.openrouter:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
